--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,10 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+  overflow-x :hidden !important;
+}
+bocdy{
+  background:#000000;
 }
 
 .main-container{
